--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,12 @@
-
-
-
-
+html {
+  
+  -ms-overflow-style: none; /* for Internet Explorer, Edge */
+  scrollbar-width: none; /* for Firefox */
+  overflow-y: scroll; 
+}
+html::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
+}
 
 * {
   padding: 0;
@@ -10,5 +15,5 @@
 .App {
   opacity: 100;
   height: 100vh;
-  background: black;
+  display: flex;
 }
