--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,9 @@ html::-webkit-scrollbar {
 }
 .App {
   opacity: 100;
-  height: 100vh;
+  height: 150vh;
   display: flex;
+}
+.eb814be3ca3b78c0734c560518be2a03e8d8f6e7e26447224cc7c7b105e1193e {
+  width: 100%;
 }
