--- a/src/Components/Particles.css
+++ b/src/Components/Particles.css
@@ -36,10 +36,11 @@
       -webkit-animation: squares 9.5s linear infinite;
               animation: squares 9.5s linear infinite;
       align-self: flex-end;
-      width: 1em;
-      height: 1em;
+      width: calc(0.9vw + 1vh);
+      height: calc(0.9vw + 1vh);
       transform: translateY(100%);
-      background: grey;
+      background: rgba(0, 0, 0, 0.2);
+      border: solid 2px white;
     }
     .square:nth-child(2) {
       height: 1.5em;
@@ -49,6 +50,7 @@
       -webkit-animation-duration: 17s;
               animation-duration: 17s;
       -webkit-filter: blur(5px);
+      z-index: -1;
     }
     .square:nth-child(3) {
       height: 2em;
@@ -58,6 +60,7 @@
       -webkit-animation-duration: 8s;
               animation-duration: 8s;
       -webkit-filter: blur();
+      z-index: -1;
     }
     .square:nth-child(4) {
       height: 1em;
@@ -67,6 +70,7 @@
       -webkit-filter: blur(3px);
       -webkit-animation-duration: 13s;
               animation-duration: 13s;
+              z-index: -1;
     }
     .square:nth-child(5) {
       height: 1.25em;
@@ -76,6 +80,7 @@
       -webkit-filter: blur(2px);
       -webkit-animation-duration: 11s;
               animation-duration: 11s;
+              z-index: -1;
     }
     .square:nth-child(6) {
       height: 2.5em;
@@ -85,6 +90,7 @@
       -webkit-filter: blur(1px);
       -webkit-animation-duration: 9s;
               animation-duration: 9s;
+              z-index: -1;
     }
     .square:nth-child(7) {
       height: 5em;
@@ -101,6 +107,7 @@
       -webkit-filter: blur(6px);
       -webkit-animation-duration: 18s;
               animation-duration: 18s;
+      z-index: -1;
     }
     .square:nth-child(9) {
       height: 1.5em;
@@ -121,7 +128,7 @@
     
     @-webkit-keyframes squares {
       from {
-        transform: translateY(100%) rotate(-50deg);
+        transform: translateY(100%) rotate(-75deg);
       }
       to {
         transform: translateY(calc(-100vh + -100%)) rotate(20deg);
@@ -130,7 +137,7 @@
     
     @keyframes squares {
       from {
-        transform: translateY(100%) rotate(-50deg);
+        transform: translateY(100%) rotate(-75deg);
       }
       to {
         transform: translateY(calc(-100vh + -100%)) rotate(20deg);
