--- a/src/Components/Start.css
+++ b/src/Components/Start.css
@@ -27,11 +27,12 @@
 
 .header, p {
   text-align: center;
+  align-items: center;
   justify-content: center
 }
 .Start {
     display: flex;
-    height: 70vh;
+    height: 100%;
     width: 100%;
     font-size: 10vh;
     font-family: 'Open Sans', sans-serif;
@@ -40,15 +41,21 @@
     justify-content: center;
   }
   .scroll {
-    
-    min-height: 10vh;
+    display: flex;
+    height: 20vh;
     position: absolute;
     bottom: 2vh;
   }
   .scroll img {
-    
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
   }
   .scroll p {
+    display: flex;
+    justify-content: center;
+    height: fit-content;
+    align-items: flex-start;
     font-size: 3vh;
   }
   .hello {
@@ -57,8 +64,9 @@
     color: white;
     opacity: 100;
     justify-content: center;
-    align-self: center;
+    align-items: center;
     display:flex;
     text-align: center;
+    height: 100%;
   }
   
