--- a/src/Components/Main.module.css
+++ b/src/Components/Main.module.css
@@ -1,10 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 .mainContainer {
-    display: inline-flex;
     flex-wrap: wrap;
     align-items: flex-end;
+    display: flex;
+    width: 100%;
 }
 .main {
-    color: white;
+    display: flex;
+    color: rgb(37, 28, 28);
     align-items: flex-end;
     justify-content: center;
+    text-align: center;
+    margin: auto;
+}
+.main section {
+    width: 100vw;
+}
+.main section .header {
+    margin-top: 5vh;
+    font-size: calc(2vh + 2vw);
+    color: white;
+    font-family: 'Source Code Pro', monospace;
+}
+.main section .bio {
+    font-family: 'Quicksand', sans-serif;
+    font-size: calc(1vh + 1vw);
+    width: 100vw;
+    color: white;
+}
+.main section .bio span {
+    display: inline-block;
+    width: 70vw;
+    text-align: center;
 }
