--- a/src/Components/Bg.module.css
+++ b/src/Components/Bg.module.css
@@ -12,7 +12,7 @@
 .bg {
     z-index: 4;
     opacity: 100;
-    background-image: url('https://thuwd-cdn.b-cdn.net/bg.jpg');
+    background-image: url('https://cdn.thuwd.org/bg.jpg');
     position: absolute;
     width: 100%;
     height: 100%;
