--- a/src/Components/Projects.module.css
+++ b/src/Components/Projects.module.css
@@ -2,7 +2,8 @@
  .projects {
     height: 100%;
     width: 75vw;
-};
+    margin-top: 10vh;
+}
  .projects .item {
     width: 27vw;
     display: flex;
@@ -10,19 +11,23 @@
     color: white;
     background-color: #000;
     border-radius: calc(1vw + 1vh);
-};
+}
 .projects .item .topBar {
     border-radius: calc(1vw + 1vh) calc(1vw + 1vh) 0 0;
     min-width: 27vw;
-    position: static;
-    z-index: 3;
+    position: absolute;
     height: 5vw;
     background-color: #121212;
-};
+
+    border-bottom: solid 10px;
+    border-image: repeating-linear-gradient( -75deg, yellow, yellow 10px, black 10px, black 20px) 20;
+}
 .projects .item .title {
     display: flex;
-    position: absolute;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
     font-family: 'Comfortaa', cursive;
-    top: 50%;
     font-size: calc(2vh + 2vw);
-};
+    text-align: center;
+}
