--- a/src/Components/subComponents/Item.module.css
+++ b/src/Components/subComponents/Item.module.css
@@ -1,28 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
- .projects {
-    height: 100%;
-    width: 75vw;
-    margin-top: 10vh;
+:root {
+    --itemradius: calc(0.3vw + 0.3vh)
 }
- .projects .item {
+.item {
     width: 27vw;
+    float: left;
     display: flex;
     height: 23vw;
     color: white;
     background-color: #000;
-    border-radius: calc(1vw + 1vh);
+    border-radius: var(--itemradius);
 }
-.projects .item .topBar {
-    border-radius: calc(1vw + 1vh) calc(1vw + 1vh) 0 0;
+.item .topBar {
+    border-radius: var(--itemradius) 0 0;
     min-width: 27vw;
     position: absolute;
     height: 5vw;
     background-color: #121212;
 
     border-bottom: solid 10px;
-    border-image: repeating-linear-gradient( -75deg, yellow, yellow 10px, black 10px, black 20px) 20;
 }
-.projects .item .title {
+.item .title {
     display: flex;
     align-items: center;
     justify-content: center;
