--- a/src/Components/Projects.module.scss
+++ b/src/Components/Projects.module.scss
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
  .projects {
+    margin-left: 10vh;
+    margin-right: 10vh;
     height: 100%;
-    width: 75vw;
+    width: 100%;
     margin-top: 10vh;
 }
