--- a/src/Components/Start.module.scss
+++ b/src/Components/Start.module.scss
@@ -51,6 +51,8 @@
     justify-content: center;
     align-items: flex-end;
     bottom: 0;
+    width: calc(5.77vh + 2.56vw);
+    height: 15vh;
   }
   .scroll p {
     display: flex;
