--- a/src/Components/subComponents/Item.module.scss
+++ b/src/Components/subComponents/Item.module.scss
@@ -10,7 +10,9 @@ $itemHeight: 53vh;
     color: white;
     background-color: #000;
     border-radius: $itemradius;
-    transition: all 300ms;
+    transition: all 200ms;
+
+    position: relative;
 }
 .item:hover {
     box-shadow: 2vh 2vh #404040;
@@ -32,4 +34,19 @@ $itemHeight: 53vh;
     font-family: 'Nunito', sans-serif;
     font-size: calc(2vh + 2vw);
     text-align: center;
+}
+.item .svg {
+    background-color: rgb(56, 54, 54);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 5vw;
+    position: absolute;
+    bottom: 0;
+    font-family: 'Nunito', sans-serif;
+    font-size: calc(2vh + 2vw);
+    text-align: center;
+}
+.item .svg img {
+    width: 5vw;
 }
